[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-clean-path = "1.0.0"
actix-cors = "0.6.4"
actix-web = "4.4.0"
serde = { version = "1.0.189", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
